--- a/.github/workflows/deploy-on-push.yml
+++ b/.github/workflows/deploy-on-push.yml
@@ -6,6 +6,14 @@ jobs:
     steps:
       - name: check out the code to build server
         uses: actions/checkout@v4
+      - name: set the ubuntu user as the owner of the /var/www/html directory for ubuntu 24+
+        uses: appleboy/ssh-action@v1.2.0
+        with:
+          host: ${{secrets.PROD_HOST}}
+          username: ${{secrets.SSH_USER_NAME}}
+          key: ${{secrets.SSH_KEY}}
+          script: |
+            sudo chown -R ubuntu /var/www/html
       - name: copy file to server
         uses: appleboy/scp-action@master
         with:
@@ -16,3 +24,11 @@ jobs:
           source: "./html/*"
           target: "/var/www/html"
           strip_components: 1
+      - name: set the root user back as the owner of the /var/www/html directory for ubuntu 24+
+        uses: appleboy/ssh-action@v1.2.0
+        with:
+          host: ${{secrets.PROD_HOST}}
+          username: ${{secrets.SSH_USER_NAME}}
+          key: ${{secrets.SSH_KEY}}
+          script: |
+            sudo chown -R root /var/www/html
